syntax = "proto3";

package comment;

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
}

message CreateCommentRequest {
    string issueId = 1;
  string content = 2;
}

message CreateCommentResponse {
  string message = 1;
  string createdAt = 3;
}