syntax = "proto3";

package user;

service UserService {
  rpc RegisterUser(RegisterRequest) returns (RegisterResponse);
  rpc LoginUser(LoginRequest) returns (LoginResponse);
  rpc CreateAdminUser(RegisterRequest) returns (AdminRegisterResponse);
  rpc SendOTP(SendOTPRequest) returns (SendOTPResponse);
  rpc verifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse);
  rpc ForgetPassword(ForgetPasswordRequest) returns (ForgetPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

message SendOTPRequest {
    string email = 1;
    string phone = 2;
}

message SendOTPResponse {
    string message = 1;
}

message VerifyOTPRequest {
    string otp = 1;
    string email = 2;
    string phone = 3;
}

message VerifyOTPResponse {
    string message = 1;
    string token = 2;
}

message ForgetPasswordRequest {
    string email = 1;
    string phone = 2;
    string password = 3;
}

message ForgetPasswordResponse {
    string message = 1;
}

message ResetPasswordRequest {
    string current_password = 1;
    string new_password = 2;
}

message ResetPasswordResponse {
    string message = 1;
}

message AdminRegisterResponse {
    string message = 1;
    string email = 2; 
    string password = 3;
    string adminId = 4;
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
    string password = 4;
}

message RegisterResponse {
    string message = 1;
    string token = 2;
    string role = 3;
}

message LoginRequest {
    string email = 1;
    string phone = 2;
    string password = 3;
}

message LoginResponse {
    string message = 1;
    string token = 2;
    string role = 3;
}
